# autoremesher

./: .gitignore  ACKNOWLEDGEMENTS.html  CMakeLists.txt  README.md  autoremesher.pro  pyproject.toml
.github/workflows/: blender-extension.yml
blender_addon/: README.md  __init__.py  blender_manifest.toml  remesh_worker.py
scripts/: package_extension.py
src/AutoRemesher/: autoremesher.cpp  autoremesher.h
src/python/: binding.cpp
tests/: test_extension.py
