[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.2"]
build-backend = "scikit_build_core.build"

[project]
name = "autoremesher-core"
version = "1.0.0"
description = "Automatic quad remeshing core (AutoRemesher) as a Python module"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jeremy HU" },
]

[project.urls]
Homepage = "https://autoremesher.dust3d.org/"
Repository = "https://github.com/huxingyi/autoremesher"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
build = ["cp312-*"]
build-verbosity = 1
test-command = "python -c \"import autoremesher_core; print(autoremesher_core.Remesher)\""

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
